Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6450

QTreeView selectAll after hideColumn won't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.2
    • 4.6.0
    • Widgets: Itemviews
    • None
    • Windows7
    • 8b42e57fe2946f2cd17f538d0dec2ba6edc06a11

    Description

      Calling QTreeView::selectAll () method after QTreeView::hideColumn ( int column ) won't work.

      Occured to me on QTreeView with SelectionMode = MultiSelection , SelectionBehavior = SelectRows
      CTRL-A shortcut won't work either.

      workaround :

      • replacing treeView->hideColumn(0); by treeView->header()->resizeSection(0,0);

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            akobor Andras Kobor
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes