QTreeView::selectAll() wouldn't work when first column hidden

QTreeView::selectAll() called QTreeView::select() on the first column, first
and last rows, and rows selection flags. As the first row was hidden, this
range spanned to void. We now pass the upper-left and lower-right indices to
select(). Auto-test included.

Reviewed-by: Olivier
Task-number: QTBUG-6450